# session-lattice

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  session-lattice.d.ts
.agents/skills/repo-session-lattice/: SKILL.md
.agents/skills/session-lattice/: SKILL.md
.claude/: lockdown-deny.sh
.coily/: coily.yaml
.github/workflows/: release.yml
Formula/: session-lattice-puller.rb  session-lattice.rb
docs/: FEATURES.md  architecture.md  release.md
scripts/: brew-resources.sh  brew_resources.py  emit_dts.py  smoke_puller.py
session_lattice/: __init__.py  cli.py  config.py  db.py  puller.py  refresh.py  service.py
session_lattice/views/: __init__.py  tool_sessions.py
tests/: test_tool_sessions.py
