[project]
name = "session-lattice"
version = "0.0.0"
description = "Materialized-view service over Claude session data. Pulls from repo-recall, maintains views in embedded DuckDB, serves over HTTP."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "duckdb>=1.1",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "click>=8.1",
  "httpx>=0.27",
]

[project.scripts]
session-lattice = "session_lattice.cli:main"

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "mypy>=1.20",
  "pre-commit>=4.5",
  "pytest>=8.0",
  "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["session_lattice"]
